# system-viewer

./: .gitignore  Dockerrun.aws.json  Makefile  README.md  asset-manifest.json  aws-compose.yml  deploy.sh  docker-compose-prod.yml  docker-compose.dev.yml  docker-compose.yml  docker-compose.yml.dev  index.html  precache-manifest.0b65c3774fcdff3a47fa4642dad82950.js  precache-manifest.0d6400120c91776b434efac35c72b98f.js  precache-manifest.473082e521e088c8cc1034a1a2edd26c.js  precache-manifest.a6df17a73cec4e2a854f9e148a809f3e.js  precache-manifest.cb0a85f32fd17ce296fefffd62443d4b.js  precache-manifest.fd57eb0789ee93f6d449ecef3acc2673.js  service-worker.js
backend/: Dockerfile  db.sqlite3  db.sqlite3.initial  manage.py  pyproject.toml  requirements.txt  run.sh
backend/pages/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
backend/pages/migrations/: 0001_initial.py  0002_auto_20200329_0948.py  0002_auto_20200401_1307.py
backend/poetry_web/: settings.py  urls.py
backend/scripts/: reset_db.sh
data-sender/: Dockerfile  authorized_keys  id_rsa  pyproject.toml  run.sh  ssh-sender.py
frontend/: Dockerfile  Dockerfile.dev  Dockerfile.nginx.dev  nginx.conf  nginx.conf.dev  package-lock.json  package.json
frontend/src/: App.css  App.tsx
static/css/: 2.36934f44.chunk.css  2.36934f44.chunk.css.map  2.46a2d066.chunk.css  2.46a2d066.chunk.css.map  2.78c454ec.chunk.css  2.78c454ec.chunk.css.map  2.9437efd8.chunk.css  2.9437efd8.chunk.css.map  2.b93016c7.chunk.css  2.b93016c7.chunk.css.map  main.04b0a5b2.chunk.css  main.04b0a5b2.chunk.css.map  (+8 more)
(+622 files in other folders)
